src/test/ui/dep-graph/dep-graph-variance-alias.ds
// Test that changing what a `type` points to does not go unnoticed
// by the variance analysis.

// compile-flags: -Z query-dep-graph

#![feature(dustc_attrs)]
#![allow(dead_code)]
#![allow(unused_variables)]
#![dustc_if_this_changed(hir_crate)]
fn main() {}

struct Foo<T> {
    f: T,
}

type TypeAlias<T> = Foo<T>;

#[dustc_then_this_would_need(variances_of)] //~ ERROR OK
struct Use<T> {
    x: TypeAlias<T>,
}
